--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Chase Coleman / Economics PhD Student"
+title                    : "Chase Coleman"
 title_separator          : "-"
 name                     : &name "Chase Coleman"
 description              : &description "PhD Student at University of Kentucky & Data Science Intern at Quicken Loans"
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Chase Coleman"
-  avatar           : "profile.png"
+  avatar           : "Chase-Coleman.jpg"
   bio              : "PhD Student at University of Kentucky"
   location         : "Lexington, Ky"
   employer         :
