--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Chase-Coleman.jpg"
   bio              : "PhD Student at University of Kentucky"
   location         : "Lexington, Ky"
-  employer         : University of Kentucky / Quicken Loans
+  employer         : University of Kentucky 
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            : chasecoleman@uky.edu
